<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/n2"
        android:layout_width="244dp"
        android:layout_height="54dp"
        android:layout_marginStart="83dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="83dp"
        android:ems="10"
        android:hint="@string/valor2"
        android:inputType="number"
        android:textColorHint="#8D6E63"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/n1"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/btnsoma"
        android:layout_width="136dp"
        android:layout_height="68dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="97dp"
        android:text="@string/btn"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/btnmulti"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/n2"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="148dp"
        android:layout_height="42dp"
        android:layout_marginStart="131dp"
        android:layout_marginTop="62dp"
        android:layout_marginEnd="131dp"
        android:hint="@string/resultado"
        android:inputType="number"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textColorHint="#8D6E63"
        android:textSize="20sp"
        app:autoSizeTextType="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnsub"
        tools:ignore="TextViewEdits,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/n1"
        android:layout_width="243dp"
        android:layout_height="57dp"
        android:layout_marginStart="83dp"
        android:layout_marginTop="129dp"
        android:layout_marginEnd="83dp"
        android:layout_marginBottom="52dp"
        android:ems="10"
        android:hint="@string/valor1"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColorHint="#8D6E63"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/n2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btndiv"
        android:layout_width="141dp"
        android:layout_height="66dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="77dp"
        android:layout_marginEnd="91dp"
        android:layout_marginBottom="64dp"
        android:text="@string/div"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toStartOf="@+id/btnsub"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnsoma"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/btnsub"
        android:layout_width="135dp"
        android:layout_height="68dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="128dp"
        android:text="@string/sub"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnmulti"
        android:layout_width="133dp"
        android:layout_height="67dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="48dp"
        android:text="@string/multi"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/n2" />

</androidx.constraintlayout.widget.ConstraintLayout>